# IntelliForge-Applied-GenAI-Playbook

./: .gitignore  README.md  enhancements.md  pyproject.toml  requirements.txt
apps/adaptive_query_rag/: README.md
apps/adaptive_query_rag/data/: sample_docs.csv
apps/adaptive_query_rag/src/: app.py
apps/competitive_analysis_agent/: README.md
apps/competitive_analysis_agent/src/: app.py
apps/context_quest/: README.md  requirements.txt
apps/context_quest/data/: context.csv
apps/context_quest/src/: app.py
apps/fiscal_agent/: README.md  requirements.txt
apps/fiscal_agent/src/: app.py
apps/graph_query/: README.md  requirements.txt
apps/graph_query/src/: app.py
apps/insight_agent/: README.md  requirements.txt
apps/insight_agent/src/: app.py
apps/multi_perspective_synth/: README.md
apps/multi_perspective_synth/data/: perspective_a.csv  perspective_b.csv  perspective_c.csv
apps/reflective_rag/: README.md  requirements.txt
apps/research_assistant_agent/: README.md  requirements.txt
apps/tool_augmented_rag/: README.md  requirements.txt
apps/web_quest_rag/: README.md  requirements.txt
core/llm/: gemini_utils.py
core/utils/: __init__.py  data_helpers.py  evaluation.py  file_io.py  retrieval_utils.py  ui_helpers.py  web_crawler.py
docs/: architecture.md  overview.md
docs/apps/: adaptive_query_rag.md  competitive_analysis_agent.md  context_quest.md  fiscal_agent.md  graph_query.md  insight_agent.md  multi_perspective_synth.md  reflective_rag.md  research_assistant_agent.md  tool_augmented_rag.md  web_quest_rag.md
(+11 files in other folders)
