[project]
name = "intelliforge-applied-genai-playbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-generativeai>=0.8.4",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "yfinance>=0.2.55",
]
